--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,23 @@
   <body>
     <nav class="navbar site-header sticky-top py-1">
       <div class="container d-flex flex-column flex-md-row justify-content-between">
-        <h1 class="logo py-2"><%= image_tag('logo_tm_100.png', size: '70') %> Travel Match</h1>
+        <%= link_to root_path do %>
+          <h1 class="logo py-2"><%= image_tag('logo_tm_100.png', size: '70') %> Travel Match</h1>
+        <% end %>
         <%= render 'shared/navbar' %>
       </div>
     </nav>
+    <div class="container">
+      <% if flash.any? %>
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <%= flash[:success] %>
+          <%= flash[:notice] %>
+        </div>
+      <% end %>
       <%= yield %>
+    </div>
   </body>
 </html>
