--- a/app/views/tourist_spots/_tourist_spot.html.erb
+++ b/app/views/tourist_spots/_tourist_spot.html.erb
@@ -1,8 +1,12 @@
-<h5><%= tourist_spot.title %></h5>
-<ul>
-  <li> <%= tourist_spot.comment %> </li>
-  <li> <%= tourist_spot.location %> </li>
-  <li> <%= tourist_spot.activity_date.strftime('%d/%m/%Y') %> </li>
-  <li> <%= tourist_spot.spot_type %> </li>
-  <li> <%= number_to_currency(tourist_spot.value, unit: "R$", separator: ",", delimiter: "") %> </li>
-</ul>
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title"><%= tourist_spot.title %></h5>
+    <h6 class="card-subtitle mb-2 text-muted"><%= tourist_spot.location %></h6>
+    <dl>
+      <dt>Data</dt><dd><%= l tourist_spot.activity_date, format: :short %></dd>
+      <dt>Tipo</dt><dd><%= tourist_spot.spot_type %></dd>
+      <dt>Classificação de Preço</dt><dd><%= number_to_currency(tourist_spot.value) %></dd>
+      <dt>Comentário</dt><dd><%= tourist_spot.comment %></dd>
+    </dl>
+  </div>
+</div>
