Improve more layout

--- a/app/views/matches/_accepted_matches.html.erb
+++ b/app/views/matches/_accepted_matches.html.erb
@@ -1,4 +1,8 @@
 <h5>Matches deste plano</h5>
-<% matches.accepted.each do |match| %>
-  <p>Usuário: <%= match.user.email %> </p>
-<% end %>
+<% if matches.accepted.any? %>
+  <% matches.accepted.each do |match| %>
+    <p>Usuário: <%= match.user.email %> </p>
+  <% end %>
+<% else %>
+  <p>Ainda não existem matches.</p>
+<% end  %>
