--- a/app/views/trip_plans/show.html.erb
+++ b/app/views/trip_plans/show.html.erb
@@ -7,14 +7,7 @@
       <div class="row">
       <% @trip_plan.itineraries.each do |itinerary| %>
         <div class="col-6 mt-2">
-          <div class="card" style="width: 18rem;">
-            <div class="card-body">
-              <h5 class="card-title"><%= link_to itinerary.location, trip_plan_itinerary_path(@trip_plan, itinerary)  %></h5>
-              <h6 class="card-subtitle mb-2 text-muted"><%=  itinerary.season %></h6>
-              <p class="card-text"> De <%= I18n.l(itinerary.start_date) %>
-                a <%= I18n.l(itinerary.end_date) %></p>
-            </div>
-          </div>
+          <%= render itinerary %>
         </div>
       <% end %>
       </div>
@@ -27,6 +20,7 @@
   <% if user_signed_in? %>
     <div>
       <%= @trip_plan.pendent_matches %>
+      <br />
       <%= @trip_plan.accepted_matches %>
       <% unless @trip_plan.owner?(current_user) %>
         <% if !@match.is_a?(Match) && @match.any?  %>
