--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,14 +1,14 @@
 <div class="inline-block text-left section__body">
   <%- if controller_name != 'sessions' %>
-    <%= link_to "Log in", new_session_path(resource_name) %><br />
+    <%= link_to "Log in", new_session_path(resource_name), class: 'btn btn-light' %><br />
   <% end -%>
 
   <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-    <%= link_to "Cadastre-se", new_registration_path(resource_name) %><br />
+    <%= link_to "Cadastre-se", new_registration_path(resource_name), class: 'btn btn-primary'%><br />
   <% end -%>
 
   <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-    <%= link_to "Esqueceu sua senha?", new_password_path(resource_name) %><br />
+    <%= link_to "Esqueceu sua senha?", new_password_path(resource_name), class: 'btn btn-light' %><br />
   <% end -%>
 
   <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
