--- a/app/views/trip_plans/index.html.erb
+++ b/app/views/trip_plans/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="container padding-top">
-  <h3>Plano de Viagem</h3>
+  <h3>Planos de Viagem</h3>
   <% if flash.any? %>
     <div class="alert alert-success alert-dismissible fade show" role="alert">
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
